librbd: recursive lock possible when disabling journaling

If pool-level mirroring is enabled, deleting the journal
could cause a deadlock attempting to delete remote peer
sync-point snapshots.

Fixes: http://tracker.ceph.com/issues/16235
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit fb255e6c3cd44c8d24c53e3cd70395a11a712574)